--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -1,5 +1,5 @@
 #######################################################################################
-# Global Values
+## Global Values
 
 global:
   ## Allowed headers
@@ -39,7 +39,7 @@ global:
     ##
     #tlsSecret: "tls-cert"
 
-# End of Global Values
+## End of Global Values
 #######################################################################################
 
 #######################################################################################
@@ -77,7 +77,7 @@ coordinator:
       accessMode: ReadWriteOnce
       storage: 4Gi
 
-# End of Coordinator Values
+## End of Coordinator Values
 #######################################################################################
 
 #######################################################################################
@@ -115,7 +115,7 @@ contributor:
       accessMode: ReadWriteOnce
       storage: 4Gi
 
-# End of Contributor Values
+## End of Contributor Values
 #######################################################################################
 
 #######################################################################################
@@ -189,7 +189,7 @@ bit-broker-db:
 #######################################################################################
 
 #######################################################################################
-# Auth Service Values
+## Auth Service Values
 
 auth-service:
   enabled: true
@@ -213,11 +213,11 @@ auth-service:
   ## Docker image
   ##
 
-# End of Auth Service Values
+## End of Auth Service Values
 #######################################################################################
 
 #######################################################################################
-# Rate Service Values
+## Rate Service Values
 
 rate-service:
   enabled: true
@@ -258,9 +258,10 @@ rate-service:
     ##   GKE, AWS & OpenStack)
     ## storageClass: "-"
 
-# End of Rate Service Values
+## End of Rate Service Values
 #######################################################################################
-# Bbk Mockup Values
+
+## Bbk Mockup Values
 
 bbk-mockup-api:
   enabled: true
@@ -278,39 +279,39 @@ bbk-mockup-api:
   server_port: '8080'
   ui_url: 'https://ui.com'
 
-# End of Bbk Mockup Values
+## End of Bbk Mockup Values
 #######################################################################################
 
 #######################################################################################
-# Ambassador Values
+## Ambassador Values
 
 ambassador-bbk:
-  # Dependency enabler
+  ## Dependency enabler
   enabled: true
-  # Default values for ambassador.
-  # This is a YAML-formatted file.
-  # Declare variables to be passed into your templates.
+  ## Default values for ambassador.
+  ## This is a YAML-formatted file.
+  ## Declare variables to be passed into your templates.
 
-  # Manually set metadata for the Release.
-  #
-  # Defaults to .Chart.Name
+  ## Manually set metadata for the Release.
+  ##
+  ## Defaults to .Chart.Name
   nameOverride: ""
-  # Defaults to .Release.Name-.Chart.Name unless .Release.Name contains "ambassador"
+  ## Defaults to .Release.Name-.Chart.Name unless .Release.Name contains "ambassador"
   fullnameOverride: ""
-  # Defaults to .Release.Namespace
+  ## Defaults to .Release.Namespace
   namespaceOverride: ""
 
   replicaCount: 3
   daemonSet: false
 
-  # This will enable the test-ready Pod (https://github.com/datawire/ambassador-chart/blob/master/templates/tests/test-ready.yaml).
-  # It will spawn a busybox container to call Ambassador's check_ready endpoint to validate it is working correctly.
+  ## This will enable the test-ready Pod (https://github.com/datawire/ambassador-chart/blob/master/templates/tests/test-ready.yaml).
+  ## It will spawn a busybox container to call Ambassador's check_ready endpoint to validate it is working correctly.
   test:
     enabled: true
     image: busybox
 
-  # Enable autoscaling using HorizontalPodAutoscaler
-  # daemonSet: true, autoscaling will be disabled
+  ## Enable autoscaling using HorizontalPodAutoscaler
+  ## daemonSet: true, autoscaling will be disabled
   autoscaling:
     enabled: false
     minReplicas: 2
@@ -334,10 +335,10 @@ ambassador-bbk:
   # namespace:
   # name: default
 
-  # Additional container environment variable
-  # Uncomment or add additional environment variables for the container here.
+  ## Additional container environment variable
+  ## Uncomment or add additional environment variables for the container here.
   env: { }
-    # Exposing statistics via StatsD
+    ## Exposing statistics via StatsD
     # STATSD_ENABLED: true
     # STATSD_HOST: statsd-sink
     # sets the minimum number of seconds between Envoy restarts
@@ -346,7 +347,7 @@ ambassador-bbk:
     # AMBASSADOR_DRAIN_TIME: 5
     # sets the number of seconds that Ambassador will wait for the old Envoy to clean up and exit on a restart
     # AMBASSADOR_SHUTDOWN_TIME: 10
-  # labels Ambassador with an ID to allow for configuring multiple Ambassadors in a cluster
+  ## labels Ambassador with an ID to allow for configuring multiple Ambassadors in a cluster
   # AMBASSADOR_ID: default
 
   # Additional container environment variable in raw YAML format
@@ -405,7 +406,7 @@ ambassador-bbk:
     #   runAsUser:
     #     rule: MustRunAsNonRoot
 
-  # Disable AES for Bit-Broker
+  ## Disable AES for Bit-Broker
   enableAES: false
 
   image:
@@ -419,8 +420,8 @@ ambassador-bbk:
   service:
     type: LoadBalancer
 
-    # Note that target http ports need to match your ambassador configurations service_port
-    # https://www.getambassador.io/reference/modules/#the-ambassador-module
+    ## Note that target http ports need to match your ambassador configurations service_port
+    ## https://www.getambassador.io/reference/modules/#the-ambassador-module
     ports:
       - name: http
         port: 80
@@ -450,7 +451,7 @@ ambassador-bbk:
 
     annotations: { }
 
-    # Manually set the name of the generated Service
+    ## Manually set the name of the generated Service
     nameOverride:
 
   adminService:
@@ -527,7 +528,7 @@ ambassador-bbk:
   # configmap.reloader.stakater.com/auto: "true"
 
   resources:
-    # Recommended resource requests and limits for Ambassador
+    ## Recommended resource requests and limits for Ambassador
     limits:
       cpu: 1000m
       memory: 600Mi
@@ -552,8 +553,8 @@ ambassador-bbk:
     create: true
     keep: true
 
-  # Prometheus Operator ServiceMonitor configuration
-  # See documentation: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#servicemonitor
+  ## Prometheus Operator ServiceMonitor configuration
+  ## See documentation: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#servicemonitor
   metrics:
     serviceMonitor:
       enabled: false
@@ -561,84 +562,86 @@ ambassador-bbk:
       # scrapeTimeout: 30s
       # selector: {}
 
-# End of Ambassador Values
+## End of Ambassador Values
 #######################################################################################
-# Ory Oathkeeper Values
+
+#######################################################################################
+## Ory Oathkeeper Values
 
 oathkeeper-bbk:
-  # Number of ORY Oathkeeper members
+  ## Number of ORY Oathkeeper members
   enabled: true
   replicaCount: 1
 
   image:
-    # ORY Oathkeeper image
+    ## ORY Oathkeeper image
     repository: oryd/oathkeeper
-    # ORY Oathkeeper version
+    ## ORY Oathkeeper version
     tag: v0.38.5
-    # Image pull policy
+    ## Image pull policy
     pullPolicy: IfNotPresent
 
-  # Options for the sidecar
+  ## Options for the sidecar
   sidecar:
     image:
       repository: oryd/oathkeeper-maester
       tag: v0.1.0
     envs: { }
 
-  # Image pull secrets
+  ## Image pull secrets
   imagePullSecrets: [ ]
-  # Chart name override
+  ## Chart name override
   nameOverride: ""
-  # Full chart name override
+  ## Full chart name override
   fullnameOverride: ""
 
-  # If enabled, a demo deployment with exemplary access rules
-  # and JSON Web Key Secrets will be generated.
+  ## If enabled, a demo deployment with exemplary access rules
+  ## and JSON Web Key Secrets will be generated.
   demo: false
 
-  # Configures the Kubernetes service
+  ## Configures the Kubernetes service
   service:
-    # Configures the Kubernetes service for the proxy port.
+    ## Configures the Kubernetes service for the proxy port.
     proxy:
-      # En-/disable the service
+      ## En-/disable the service
       enabled: true
-      # The service type
+      ## The service type
       type: ClusterIP
-      # The service port
+      ## The service port
       port: 4455
-      # If you do want to specify annotations, uncomment the following
-      # lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
+      ## If you do want to specify annotations, uncomment the following
+      ## lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
       annotations: { }
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"
       labels: { }
-      #      If you do want to specify additional labels, uncomment the following
-      #      lines, adjust them as necessary, and remove the curly braces after 'labels:'.
-      #      e.g.  app: oathkeeper
+      ##      If you do want to specify additional labels, uncomment the following
+      ##      lines, adjust them as necessary, and remove the curly braces after 'labels:'.
+      ##      e.g.  app: oathkeeper
 
-    # Configures the Kubernetes service for the api port.
+    ## Configures the Kubernetes service for the api port.
     api:
-      # En-/disable the service
+      ## En-/disable the service
       enabled: true
-      # The service type
+      ## The service type
       type: ClusterIP
-      # The service port
+      ## The service port
       port: 4456
-      # If you do want to specify annotations, uncomment the following
-      # lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
+      ## If you do want to specify annotations, uncomment the following
+      ## lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
       annotations: { }
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+      ## kubernetes.io/ingress.class: nginx
+      ## kubernetes.io/tls-acme: "true"
       labels: { }
-      #      If you do want to specify additional labels, uncomment the following
-      #      lines, adjust them as necessary, and remove the curly braces after 'labels:'.
-      #      e.g.  app: oathkeeper
+      ##      If you do want to specify additional labels, uncomment the following
+      ##      lines, adjust them as necessary, and remove the curly braces after 'labels:'.
+      ##      e.g.  app: oathkeeper
 
-  # Configure ingress
+  ## Configure ingress
   ingress:
-    # Configure ingress for the proxy port.
+    ## Configure ingress for the proxy port.
     proxy:
-      # En-/Disable the proxy ingress.
+      ## En-/Disable the proxy ingress.
       enabled: false
       annotations: { }
       #     kubernetes.io/ingress.class: nginx
@@ -668,7 +671,7 @@ oathkeeper-bbk:
   #        - api.oathkeeper.local
   #      - secretName: oathkeeper-api-example-tls
 
-  # Configure ORY Oathkeeper itself
+  ## Configure ORY Oathkeeper itself
   oathkeeper:
     # The ORY Oathkeeper configuration. For a full list of available settings, check:
     #   https://github.com/ory/oathkeeper/blob/master/docs/config.yaml
@@ -709,17 +712,17 @@ oathkeeper-bbk:
         allow:
           enabled: true
 
-  #  If set, uses the given JSON Web Key Set as the signing key for the ID Token Mutator.
-  #  mutatorIdTokenJWKs: {}
-  #  If set, uses the given access rules.
-  #  accessRules: {}
+  ##  If set, uses the given JSON Web Key Set as the signing key for the ID Token Mutator.
+  ##  mutatorIdTokenJWKs: {}
+  ##  If set, uses the given access rules.
+  ## accessRules: {}
 
   deployment:
     resources: { }
-    #  We usually recommend not to specify default resources and to leave this as a conscious
-    #  choice for the user. This also increases chances charts run on environments with little
-    #  resources, such as Minikube. If you do want to specify resources, uncomment the following
-    #  lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    ##  We usually recommend not to specify default resources and to leave this as a conscious
+    ## choice for the user. This also increases chances charts run on environments with little
+    ##  resources, such as Minikube. If you do want to specify resources, uncomment the following
+    ##  lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     #  limits:
     #    cpu: 100m
     #    memory: 128Mi
@@ -736,17 +739,17 @@ oathkeeper-bbk:
       allowPrivilegeEscalation: false
       privileged: false
 
-    # Node labels for pod assignment.
+    ## Node labels for pod assignment.
     nodeSelector: { }
-    # If you do want to specify node labels, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
+    ## If you do want to specify node labels, uncomment the following
+    ## lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
     #   foo: bar
 
     extraEnv: [ ]
 
-    # Configuration for tracing providers. Only datadog is currently supported through this block.
-    # If you need to use a different tracing provider, please manually set the configuration values
-    # via "oathkeeper.config" or via "deployment.extraEnv".
+    ## Configuration for tracing providers. Only datadog is currently supported through this block.
+    ## If you need to use a different tracing provider, please manually set the configuration values
+    ## via "oathkeeper.config" or via "deployment.extraEnv".
     tracing:
       datadog:
         enabled: false
@@ -768,27 +771,27 @@ oathkeeper-bbk:
         # Default value: false.
         # useHostIP: true
 
-    # Configure node tolerations.
+    ## Configure node tolerations.
     tolerations: [ ]
 
     labels: { }
-    #      If you do want to specify additional labels, uncomment the following
-    #      lines, adjust them as necessary, and remove the curly braces after 'labels:'.
+    ##      If you do want to specify additional labels, uncomment the following
+    ##     lines, adjust them as necessary, and remove the curly braces after 'labels:'.
     #      e.g.  type: app
 
     annotations: { }
-    #      If you do want to specify annotations, uncomment the following
-    #      lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
+    ##      If you do want to specify annotations, uncomment the following
+    ##      lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
     #      e.g.  sidecar.istio.io/rewriteAppHTTPProbers: "true"
 
 
-  # Configure node affinity
+  #
   affinity: { }
 
-  # Configures controller setup
+  ## Configures controller setup
   maester:
     enabled: true
     oathkeeperFullnameOverride: 'oathkeeper-bbk'
 
-# End of Ory Oathkeeper Values
+## End of Ory Oathkeeper Values
 #######################################################################################
