--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -592,8 +592,8 @@ oathkeeper-bbk:
   imagePullSecrets: [ ]
   ## Chart name override
   nameOverride: ""
-  ## Full chart name override
-  fullnameOverride: ""
+  # Full chart name override
+  fullnameOverride: "oathkeeper-bbk"
 
   ## If enabled, a demo deployment with exemplary access rules
   ## and JSON Web Key Secrets will be generated.
@@ -637,42 +637,11 @@ oathkeeper-bbk:
       ##      lines, adjust them as necessary, and remove the curly braces after 'labels:'.
       ##      e.g.  app: oathkeeper
 
-  ## Configure ingress
-  ingress:
-    ## Configure ingress for the proxy port.
-    proxy:
-      ## En-/Disable the proxy ingress.
-      enabled: false
-      annotations: { }
-      #     kubernetes.io/ingress.class: nginx
-      #     kubernetes.io/tls-acme: "true"
-      hosts:
-        - host: proxy.oathkeeper.localhost
-          paths: [ "/" ]
-    #    tls: []
-    #        hosts:
-    #          - proxy.oathkeeper.local
-    #      - secretName: oathkeeper-proxy-example-tls
-
-    api:
-      # En-/Disable the api ingress.
-      enabled: false
-
-      annotations: { }
-      #      If you do want to specify annotations, uncomment the following
-      #      lines, adjust them as necessary, and remove the curly braces after 'annotations:'.
-      #      kubernetes.io/ingress.class: nginx
-      #      kubernetes.io/tls-acme: "true"
-      hosts:
-        - host: api.oathkeeper.localhost
-          paths: [ "/" ]
-  #    tls: []
-  #      hosts:
-  #        - api.oathkeeper.local
-  #      - secretName: oathkeeper-api-example-tls
-
-  ## Configure ORY Oathkeeper itself
   oathkeeper:
+    # Disable managed access rules
+    # Maester will handle this
+    managedAccessRules: false
+
     # The ORY Oathkeeper configuration. For a full list of available settings, check:
     #   https://github.com/ory/oathkeeper/blob/master/docs/config.yaml
     config:
@@ -791,7 +760,10 @@ oathkeeper-bbk:
   ## Configures controller setup
   maester:
     enabled: true
-    oathkeeperFullnameOverride: 'oathkeeper-bbk'
+    oathkeeperFullnameOverride: "oathkeeper-bbk"
+  oathkeeper-maester:
+    oathkeeperFullnameOverride: "oathkeeper-bbk"
+
 
 ## End of Ory Oathkeeper Values
 #######################################################################################
