--- a/helm/charts/bit-broker/templates/oathkeeper-config.yaml
+++ b/helm/charts/bit-broker/templates/oathkeeper-config.yaml
@@ -1,63 +1,87 @@
 {{- if index .Values "oathkeeper-bbk" "enabled" }}
----
-apiVersion: oathkeeper.ory.sh/v1alpha1
-kind: Rule
+apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: bbk-consume-auth
+  name: {{ .Release.Name }}-oathkeeper-bbk-rules
+  namespace: '{{ .Release.Namespace }}'
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-  annotations:
-    helm.sh/hook: post-install
-    helm.sh/hook-delete-policy: before-hook-creation,hook-failed
-spec:
-  match:
-    methods: ["GET", "HEAD"]
-    url: "<http|https>://<.*>/bbk/consume/<.*>"
-  authenticators:
-  - handler: jwt
-    config:
-      scope_strategy: exact
-      required_scope:
-      - consume
-      trusted_issuers:
-      - '{{ .Values.global.issuer }}'
-      allowed_algorithms:
-      - RS256
-  authorizer:
-    handler: allow
-  mutators:
-  - handler: hydrator
----
-apiVersion: oathkeeper.ory.sh/v1alpha1
-kind: Rule
-metadata:
-  name: bbk-contribute-auth
-  labels:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-  annotations:
-    helm.sh/hook: post-install
-    helm.sh/hook-delete-policy: before-hook-creation,hook-failed
-spec:
-  match:
-    methods: ["GET", "HEAD"]
-    url: "<http|https>://<.*>/bbk/contribute/<.*>"
-  authenticators:
-  - handler: jwt
-    config:
-      scope_strategy: exact
-      required_scope:
-      - consume
-      trusted_issuers:
-      - '{{ .Values.global.issuer }}'
-      allowed_algorithms:
-      - RS256
-  authorizer:
-    handler: allow
-  mutators:
-  - handler: hydrator
----
+data:
+  "access-rules.json": |
+    [{
+      "id": "bbk-consume-auth",
+      "match": {
+        "url": "<http|https>://<.*>/bbk/consume/<.*>",
+        "methods": ["GET", "HEAD"]
+      },
+      "authenticators": [
+        {
+          "handler": "jwt",
+          "config": {
+            "scope_strategy": "exact",
+            "required_scope": ["consume"],
+            "trusted_issuers": ["{{ .Values.global.issuer }}"],
+            "allowed_algorithms": ["RS256"],
+            "token_from": {
+              "header": "{{ .Values.global.headers.authToken }}"
+            }
+          }
+        }
+      ],
+      "authorizer": {
+        "handler": "allow"
+      },
+      "mutators": [
+        {
+          "handler": "hydrator"
+        },
+        {
+          "handler": "header",
+          "config": {
+            "headers": {
+              "{{ .Values.global.headers.policy }}": "{{ .Values.global.policyTemplate }}"
+            }
+          }
+        }
+      ]
+    },
+    {
+    "id": "bbk-contribute-auth",
+    "match": {
+      "url": "<http|https>://<.*>/bbk/contribute/<.*>",
+      "methods": ["GET", "HEAD"]
+    },
+    "authenticators": [
+      {
+        "handler": "jwt",
+        "config": {
+          "scope_strategy": "exact",
+          "required_scope": ["contribute"],
+          "trusted_issuers": ["{{ .Values.global.issuer }}"],
+          "allowed_algorithms": ["RS256"],
+          "token_from": {
+            "header": "{{ .Values.global.headers.authToken }}"
+          }
+        }
+      }
+    ],
+    "authorizer": {
+      "handler": "allow"
+    },
+    "mutators": [
+      {
+        "handler": "hydrator"
+      },
+      {
+        "handler": "header",
+        "config": {
+          "headers": {
+            "{{ .Values.global.headers.policy }}": "{{ .Values.global.policyTemplate }}"
+          }
+        }
+      }
+    ]
+    }]
 {{- end }}
