--- a/helm/charts/rate-service/templates/deployment-redis.yaml
+++ b/helm/charts/rate-service/templates/deployment-redis.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: redis
-        image: "redis:latest"
+        image: "redis:{{ .Values.redisImageTag }}"
         ports:
         - containerPort: 6379
 {{- if .Values.persistentVolume.enabled }}
