Improved helm templates and values : Fix Coordiantor, contributor, consumer broken deployment.

--- a/helm/charts/contributor/templates/deployment.yaml
+++ b/helm/charts/contributor/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         group: {{ .Values.group }}
     spec:
       volumes:
-        - name: {{ .Release.Name }}-{{ .Chart.Name }}-vol
+        - name: {{ .Release.Name }}-{{ .Chart.Name }}-logvol
           persistentVolumeClaim:
             claimName: {{ .Release.Name }}-{{ .Chart.Name }}-pvc
       securityContext:
