--- a/helm/charts/rate-service/templates/deployment.yaml
+++ b/helm/charts/rate-service/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
       containers:
       - name: rate-service
         imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
-        image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/rate-service:{{ .Values.docker.imageTag }}"
+        image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/rate-service:{{ .Values.docker.imageTag }}"
         ports:
         - containerPort: 4000
         - containerPort: 7000
