--- a/helm/charts/bit-broker/templates/ambassador-config.yaml
+++ b/helm/charts/bit-broker/templates/ambassador-config.yaml
@@ -1,4 +1,5 @@
 {{- if index .Values "ambassador-bbk" "enabled" }}
+{{- if .Values.global.gateway.host }}
 ---
 apiVersion: getambassador.io/v2
 kind: Host
@@ -15,6 +16,7 @@ spec:
 {{- if  .Values.global.gateway.tlsSecret }}
   tlsSecret:
     name: {{ .Values.global.gateway.tlsSecret }}
+{{- end }}
 {{- end }}
 ---
 apiVersion: getambassador.io/v2
