--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -32,6 +32,7 @@ global:
   ##
   gateway:
     ## Host URL
+    ## If specified, an Ambassador Host will be created
     ##
     host: "bit-broker.io"
 
