Improved helm templates and values : Remove -svc from service names.

--- a/helm/charts/consumer/templates/service.yaml
+++ b/helm/charts/consumer/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}-svc
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/instance: {{ .Release.Name }}
