--- a/helm/charts/rate-service/values.yaml
+++ b/helm/charts/rate-service/values.yaml
@@ -19,25 +19,27 @@ logLevel: "InfoLevel"
 
 ## Redis docker image tag
 ##
-redisImageTag: "latest"
+redis:
+  ## Redis image
+  imageTag: "6.2.3"
 
-persistentVolume:
-  ## whether or not persistence is enabled
+  ## Whether or not persistence is enabled
   ##
-  enabled: false
+  persistentVolume:
+    enabled: false
 
-  ## Redis data Persistent Volume mount root path
-  ##
-  mountPath: /data
+    ## Redis data Persistent Volume mount root path
+    ##
+    mountPath: /data
 
-  ## Redis data Persistent Volume size
-  ##
-  size: 10Gi
+    ## Redis data Persistent Volume size
+    ##
+    size: 10Gi
 
-  ## Redis data Persistent Volume Storage Class
-  ## If defined, storageClassName: <storageClass>
-  ## If set to "-", storageClassName: "", which disables dynamic provisioning
-  ## If undefined (the default) or set to null, no storageClassName spec is
-  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-  ##   GKE, AWS & OpenStack)
-  ## storageClass: "-"
+    ## Redis data Persistent Volume Storage Class
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ## storageClass: "-"
