--- a/helm/charts/rate-service/templates/pvc.yaml
+++ b/helm/charts/rate-service/templates/pvc.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.persistentVolume.enabled }}
+{{- if .Values.redis.persistentVolume.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
