[Values] Remove one character

--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -278,7 +278,7 @@ rate-service:
       ## If undefined (the default) or set to null, no storageClassName spec is
       ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
       ##   GKE, AWS & OpenStack)
-      ## storageClass: "-"
+      # storageClass: "-"
 
 ## End of Rate Service Values
 #######################################################################################
