--- a/helm/charts/rate-service/values.yaml
+++ b/helm/charts/rate-service/values.yaml
@@ -42,4 +42,4 @@ redis:
     ## If undefined (the default) or set to null, no storageClassName spec is
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
-    ## storageClass: "-"
+    # storageClass: "-"
