Add policy server charts and values.

--- a/helm/charts/bit-broker/Chart.yaml
+++ b/helm/charts/bit-broker/Chart.yaml
@@ -49,3 +49,8 @@ dependencies:
     version: "1.0"
     repository: file://../consumer
     condition: consumer.enabled
+  - name: policy
+    version: "1.0"
+    repository: file://../policy
+    condition: consumer.enabled
+
