--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -175,6 +175,45 @@ consumer:
 #######################################################################################
 
 #######################################################################################
+## Bit-Broker Policy Values
+
+policy:
+  enabled: true
+
+  ## Consumer instance count.
+  replicaCount: 1
+
+  ## Consumer security context configuration.
+  securityContext:
+    runAsUser: 1392
+    fsGroup: 1392
+
+  ## Docker Image values.
+  docker:
+    imageTag: "latest"
+    imagePullPolicy: Always
+    imagePullSecret: regcred
+
+  container:
+    name: policy
+    port: 8003
+
+  ## Service configuration values.
+  service:
+    type: ClusterIP
+    port: 8003
+
+  ## Volume definitions.
+  volume:
+    mountPath: /home/node/app/services/policy/logs
+    pvc:
+      accessMode: ReadWriteOnce
+      storage: 4Gi
+
+## End of Bit-Broker Consumer Values
+#######################################################################################
+
+#######################################################################################
 ## Bit-Broker Postgres Values
 
 postgresql-bbk:
