--- a/helm/charts/auth-service/templates/pre-install-job.yaml
+++ b/helm/charts/auth-service/templates/pre-install-job.yaml
@@ -16,6 +16,9 @@ spec:
     metadata:
       name: {{ .Release.Name }}-{{ .Chart.Name }}-pre-install-job
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 999
       imagePullSecrets:
       - name: {{ .Values.docker.imagePullSecret }}
       restartPolicy: Never
@@ -23,4 +26,6 @@ spec:
       - name: pre-install-job
         imagePullPolicy: Always
         image: {{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/auth-service:{{ .Values.docker.imageTag }}
+        securityContext:
+          allowPrivilegeEscalation: false
         command: ['npm', 'run', 'check-jwks', '{{ .Values.JWKS }}', '--silent']
