[Rate Service] Fix all SecureCN Alerts

--- a/helm/charts/rate-service/templates/deployment.yaml
+++ b/helm/charts/rate-service/templates/deployment.yaml
@@ -21,6 +21,7 @@ spec:
         prometheus.io/port: "9090"
         prometheus.io/path: "/metrics"
     spec:
+      preemptionPolicy: PreemptLowerPriority
       securityContext:
         runAsNonRoot: true
         runAsUser: 999
