Fix redis connection issues.

--- a/helm/charts/policy/templates/deployment-redis.yaml
+++ b/helm/charts/policy/templates/deployment-redis.yaml
@@ -11,11 +11,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Release.Name }}-{{ .Chart.Name }}
+      app: {{ .Release.Name }}-{{ .Chart.Name }}-redis
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}-{{ .Chart.Name }}
+        app: {{ .Release.Name }}-{{ .Chart.Name }}-redis
     spec:
       containers:
       - name: redis
