--- a/helm/charts/rate-service/templates/service-redis.yaml
+++ b/helm/charts/rate-service/templates/service-redis.yaml
@@ -14,4 +14,4 @@ spec:
     port: 6379
   type: ClusterIP
   selector:
-    app: {{ .Release.Name }}-{{ .Chart.Name }}
+    app: {{ .Release.Name }}-{{ .Chart.Name }}-redis
