--- a/helm/charts/coordinator/templates/deployment.yaml
+++ b/helm/charts/coordinator/templates/deployment.yaml
@@ -29,6 +29,8 @@ spec:
         - name: {{ .Values.name }}
           image: "{{ .Values.docker.registry | default .Values.global.docker.registry }}/bbkr/coordinator:{{ .Values.docker.imageTag }}"
           imagePullPolicy: {{ .Values.docker.imagePullPolicy }}
+          securityContext:
+            allowPrivilegeEscalation: false
           ports:
             - containerPort: {{ .Values.container.port }}
           envFrom:
