--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -54,13 +54,40 @@ global:
     ## ref: https://hub.docker.com/r/bitnami/postgresql/tags/
     ##
 
+  ## Redis global options
+  ##
+  redis:
+    ## Redis image
+    imageTag: "6.2.3-alpine"
+
+    ## Whether or not persistence is enabled
+    ##
+    persistentVolume:
+      enabled: false
+
+      ## Redis data Persistent Volume mount root path
+      ##
+      mountPath: /data
+
+      ## Redis data Persistent Volume size
+      ##
+      size: 10Gi
+
+      ## Redis data Persistent Volume Storage Class
+      ## If defined, storageClassName: <storageClass>
+      ## If set to "-", storageClassName: "", which disables dynamic provisioning
+      ## If undefined (the default) or set to null, no storageClassName spec is
+      ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+      ##   GKE, AWS & OpenStack)
+      # storageClass: "-"
+
 ## End of Global Values
 #######################################################################################
 
 #######################################################################################
 ## Bit-Broker Coordinator Values
 
-coordinator:
+coordinator-bbk:
   enabled: true
 
   ## Coordinator instance count.
@@ -94,7 +121,7 @@ coordinator:
 #######################################################################################
 ## Bit-Broker Contributor Values
 
-contributor:
+contributor-bbk:
   enabled: true
 
   ## Contributor instance count.
@@ -128,7 +155,7 @@ contributor:
 #######################################################################################
 ## Bit-Broker Consumer Values
 
-consumer:
+consumer-bbk:
   enabled: true
 
   ## Consumer instance count.
@@ -162,7 +189,7 @@ consumer:
 #######################################################################################
 ## Bit-Broker Policy Values
 
-policy:
+policy-bbk:
   enabled: true
 
   ## Consumer instance count.
@@ -190,33 +217,16 @@ policy:
       accessMode: ReadWriteOnce
       storage: 4Gi
 
-  ## Redis docker image tag
+  ## Redis options
   ##
   redis:
-    ## Redis image
-    imageTag: "6.2.3-alpine"
-
-    ## Whether or not persistence is enabled
-    ##
-    persistentVolume:
+    ## Policy Service comes with a basic instance of Redis
+    ## Change values below to enable your own instance
+    ownInstance:
       enabled: false
-
-      ## Redis data Persistent Volume mount root path
-      ##
-      mountPath: /data
-
-      ## Redis data Persistent Volume size
-      ##
-      size: 10Gi
-
-      ## Redis data Persistent Volume Storage Class
-      ## If defined, storageClassName: <storageClass>
-      ## If set to "-", storageClassName: "", which disables dynamic provisioning
-      ## If undefined (the default) or set to null, no storageClassName spec is
-      ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-      ##   GKE, AWS & OpenStack)
-      # storageClass: "-"
-
+      #addr: "redis:6379"
+      #password: ""
+      #db: "0"
 
 ## End of Bit-Broker Policy Values
 #######################################################################################
@@ -254,7 +264,7 @@ postgresql-bbk:
 #######################################################################################
 ## Auth Service Values
 
-auth-service:
+auth-service-bbk:
   enabled: true
 
   docker:
@@ -280,7 +290,7 @@ auth-service:
 #######################################################################################
 ## Rate Service Values
 
-rate-service:
+rate-service-bbk:
   enabled: true
 
   ## Docker image
@@ -298,32 +308,16 @@ rate-service:
   ##
   logLevel: "InfoLevel"
 
-  ## Redis docker image tag
+  ## Redis options
   ##
   redis:
-    ## Redis image
-    imageTag: "6.2-alpine"
-
-    ## Whether or not persistence is enabled
-    ##
-    persistentVolume:
+    ## Rate Service comes with a basic instance of Redis
+    ## Change values below to enable your own instance
+    ownInstance:
       enabled: false
-
-      ## Redis data Persistent Volume mount root path
-      ##
-      mountPath: /data
-
-      ## Redis data Persistent Volume size
-      ##
-      size: 10Gi
-
-      ## Redis data Persistent Volume Storage Class
-      ## If defined, storageClassName: <storageClass>
-      ## If set to "-", storageClassName: "", which disables dynamic provisioning
-      ## If undefined (the default) or set to null, no storageClassName spec is
-      ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-      ##   GKE, AWS & OpenStack)
-      # storageClass: "-"
+      #addr: "redis:6379"
+      #password: ""
+      #db: "0"
 
 ## End of Rate Service Values
 #######################################################################################
