--- a/helm/charts/policy/values.yaml
+++ b/helm/charts/policy/values.yaml
@@ -29,7 +29,17 @@ volume:
     accessMode: ReadWriteOnce
     storage: 4Gi
 
+## Redis options
+##
 redis:
+  ## Rate Service comes with a basic instance of Redis
+  ## Uncomment below to enable your own instance
+  ownInstance:
+    enabled: false
+    #addr: "redis:6379"
+    #password: ""
+    #db: "0"
+
   ## Redis image
   imageTag: "6.2.3-alpine"
 
