[Values] Postgres run as non root

--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -239,6 +239,12 @@ postgresql-bbk:
   # initdbUser:
   # initdbPassword:
 
+  ## Enable security context
+  securityContext:
+    enabled: true
+    fsGroup: 1001
+    runAsNonRoot: true
+
 # End of Bit-Broker Postgres Values
 #######################################################################################
 
